<resources>
    <string name="app_name">Stories</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">compan</string>
    <string name="title_notifications">feedback</string>
    <string name="category_story_one">Lost and found</string>
    <string name="category_story_two">Back to school</string>
    <string name="category_story_three">Stranger in the night </string>
    <string name="category_story_four"> Robber and police</string>
    <string name="category_story_five">A trip to heaven</string>
    <string name="category_story_six">The Stone Cutter</string>
    <string name="category_story_seven">Money Can’t Buy Everything</string>
    <string name="category_story_eight">The Struggles of Our Life</string>
    <string name="category_story_nine">An Old Man Lived in the Village</string>
    <string name="category_story_ten"> Value yourself</string>
    <string name="category_companmenu">compan</string>
    <string name="feedbackmenu">Feedback</string>
    <string name="category_story_onemenu">Story - 1 </string>
    <string name="category_twomenu">Story - 2</string>
    <string name="category_threemenu">Story - 3</string>
    <string name="category_fourmenu">Story - 4</string>
    <string name="category_fivemenu">Story - 5</string>
    <string name="category_sixmenu">Story - 6</string>
    <string name="category_sevenmenu">Story - 7</string>
    <string name="category_eightmenu">Story - 8</string>
    <string name="category_ninemenu">Story - 9</string>
    <string name="category_tenmenu">Story - 10</string>
    <string name="one_description_1">Ten pundits (holy men) went to the Ganga to take a dip in the river.
        They held each other’s hands as they took dips thrice. When they came up the third time, they were not holding hands.
        “Let’s make sure all of us have come out of the river safely,” said a pundit, “Everybody stand in line. I will count.”
        The other holy men liked the idea and lined up as the pundit took count, “1, 2, 3, 4, 5, 6, 7, 8, 9…” He stopped at 9 as the line came to an end.
        “Nine, only nine,” screamed one of the pundits. “Oh no, one of us has drowned in the river,” cried out another.
        “You move aside. Let me take the count. Everybody, stand in a line,” said the second pundit. He began counting.
        He too could count only 9 people. All the pundits started crying for their lost friend.
    </string>
    <string name="one_description_2">A cap seller was watching the entire drama. He noticed that the man who did the counting had left himself out of the count.
        He offered to do the counting. But the holy men refused to take his help. “We are well read in scriptures. You are uneducated. We don’t trust your ability to count,”
        they said. “Alright, I leave the counting to you. But do one thing. Here, put on these caps, first.” It was getting hot. So, all the pundits put on the caps given to them.
        The cap seller asked them to remove their caps and keep them on the ground. The holy men placed the caps on the ground. “Now count the caps you had worn,” said the cap seller.
        All of them counted together, “1, 2, 3, 4, 5, 6, 7, 8, 9, 10.” “We wore these caps. The caps we wore we have been counted.
        There are ten caps. This means we are ten,” the first pundit said. All nodded their heads in agreement. “Let’s buy these magic caps,” said another pundit.
        The cap seller charged them one rupee for each cap, and walked away happily with ten coins jingling in his pocket
    </string>
    <string name="two_description_1">I am a primary school teacher. Do you know that even teachers attend classes from time to time?
        We become students and learn from senior teachers! In one such class, I met a senior teacher, Mrs. Sasikala. She was a kind person and was a good teacher.
        She was part of the Municipal Department that looked after education. Her job was to ensure that every kid in her locality would attend school.
        She was our favourite teacher in the training sessions. That’s why we were disappointed when she didn’t come to take our class for a couple of days.
        Then, much to our relief, she started taking our class again. She explained her absence — she told us she had gone in search of her missing students.
        “What missing students?” we all asked. Mrs. Sasikala then told us what she had been doing for the last two days. “We try our very best to get all children to attend school.
        These children come from poor backgrounds. When a child is absent for more than three to four days, I visit their place to see what’s the problem,” said Mrs. Sasikala.
    </string>
    <string name="two_description_2">“This time two children stopped coming to my school. They were children of construction workers. I visited the
        construction site and learnt that some of the workers had moved to another construction site far away. The supervisor told me where to find them. So, I
        took a bus to that construction site far away. I found the parents of my missing students. “I was shocked to see my students working at the construction site, carrying
        bricks on their heads. I asked the parents why they had stopped sending their children to school.” “Madam, we go where our work takes us. If we don’t work, we won’t have
        enough money to buy food. Now that we work here, how can we send the children to a school that is so far away?” the mother said. “I told them I could find a school
        nearby. The next day, I took the children to the nearest Municipal School and got them admission there. Now the children are back in school,” Mrs. Sasikala finished her
        story with a smile. We were all relieved to hear that those children were back in school. We felt very proud of our teacher who took so much trouble to get those children
        back to school. Soon, the training session was completed. I went back to my school. On my return, I found one of my students had stopped attending school. She came from a
        slum across the railway track. That evening I found myself crossing the railway track, on my way to the slum, in search of my missing student.
    </string>
    <string name="three_description_1">A stranger was on a pilgrimage to Kashi. One evening, he restein a village. The villagers were kind and helpful. They offered him food to eat
        and a place to stay. As he got ready to leave the next morning, his host had a word with him, “As you go north, there is a village called Jhootagav — the village of lies. Avoid
        this village. You will not find a single kind soul there. The villagers lie, quarrel, and cheat each other. Truth has fled from that place. ”The pilgrim thanked his host and
        left. It was noon when he reached a village, where he rested under a tree. He did not know he was in Jhootagav. A group of men decided to play a prank on the visitor. They
        lighted a candle in broad daylight and started walking towards him. “What are you doing here in the middle of the night?” they asked. The pilgrim looked up — the sun was shining
        bright. He looked at the candle they were holding. “You seem to be a traveller. Would you like to carry this candle with you?” asked one of the men. “You have to pay for it. We
        will accept your gold chain,” said the other helpfully. The third one forcefully snatched the chain as the first man thrust the lighted candle in his hand. The pilgrim looked
        at the lighted candle in his hand. “Alas, there is so much darkness here,” he said. The next moment, the tricksters were in a shock. It turned pitch dark. They could hardly see
        each other. The only thing they could see was the candle light, which was moving away from them.
    </string>
    <string name="three_description_2">From that day onwards, the village did not see a sunrise. Candles could not be lit. Jhootgav now became Andhergav, the village of
        darkness. With no sunlight, no work could be done. No crops could be grown. Other villages shunned the villagers of Andhergav. No one ever entered or left Andhergav. Months
        passed, or may be days — who could tell without the sun? One day a child started crying. She was convinced it was Diwali. She wanted to light lamps. But no one could light
        anything in the village. At that moment, the villagers saw a light flickering at a distance. It got brighter. It seemed to be moving closer. Then they saw a man holding a
        candle in his hand. He was the same pilgrim who had passed through that village. Attracted by the candle in his hand, a little girl came running to him, “It is light. You
        are holding light, uncle.” By then all the villagers had gathered. They watched as the pilgrim handed the candle to the child. “Let there be light in the heart, child,” he said
        softly. The elders hung their heads in shame. The three men who had tricked the pilgrim fell at his feet begging for forgiveness. The child broke into smile as she
        shouted, “Light! Light at last!” Then there was dazzling light. The whole village was lit by the blazing sun. Villagers sank to ground, raising their hands in salutation
        to the sun. “Darkness gone. Light is here,” whispered an old woman. The pilgrim meanwhile had disappeared. But Diwali had come to that village, which is now called
        Divagaon, the village of lamps.
    </string>
    <string name="four_description_1">In ancient Talakad, there was a school to train the local police force. Students came from many kingdoms, far and
        near. “It is important to understand the mind of a thief. Once you understand how a thief thinks, it is easy to catch him,” Guru Dandapani would
        say. “You must become a thief to catch a thief,” he would add. One of his students, Kushala, took these words seriously. He became an expert in
        the art of catching thieves by becoming a thief, mentally. The Guru was pleased with him.  “Is there anything more I have to master, Gurudev?” asked
        Kushala.  “You still have something more to learn. Only Kala Yama, the Kotwal of Mysuru, can teach you that,” said Guru Dandapani. Kushala decided to
        leave for Mysuru the very next day. “Remember, Kala Yama will not teach you if you simply ask him to teach,” said the guru. “Steal something from his
        home and hide it somewhere. Then watch how the Master thief-catcher goes about finding the treasure you hide.” Kushala reached Mysuru in the evening. He
        went straight to Kala Yama’s house. He was received with honour due to a guest. The host invited him to have dinner with him and stay for the night. He
        was served food on a large golden plate. Kushala expressed his admiration for the golden plate. “If I had two of them, I would have gifted one to
        you,” said his host. “With my meager earnings, I could manage to have only one such plate, which I use for special guests, like you.” Kala Yama then
        asked his young guest how far he had progressed in his studies. “I want to be a great thief catcher like you, Sir,” said Kushala. Kala Yama laughed. “Let
        me see whether you are a good thief first,” he said as he got up to wash hands. Kushala was determined to show his host how good he was.
    </string>
</resources>