<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/title_home"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/tan_background"
            android:orientation="vertical"
            tools:context="com.example.stories.team.example.stories.MainActivity">

            <TextView
                android:id="@+id/story_one"
                style="@style/CategoryStyle"
                android:background="@color/category_story_one"
                android:text="@string/category_story_one" />

            <TextView
                android:id="@+id/story_two"
                style="@style/CategoryStyle"
                android:background="@color/category_story_two"
                android:text="@string/category_story_two" />

            <TextView
                android:id="@+id/story_three"
                style="@style/CategoryStyle"
                android:background="@color/category_story_three"
                android:text="@string/category_story_three" />

            <TextView
                android:id="@+id/story_four"
                style="@style/CategoryStyle"
                android:background="@color/category_story_four"
                android:text="@string/category_story_four" />

            <TextView
                android:id="@+id/story_five"
                style="@style/CategoryStyle"
                android:background="@color/category_story_five"
                android:text="@string/category_story_five" />

            <TextView
                android:id="@+id/story_six"
                style="@style/CategoryStyle"
                android:background="@color/category_story_six"
                android:text="@string/category_story_six" />

            <TextView
                android:id="@+id/story_seven"
                style="@style/CategoryStyle"
                android:background="@color/category_story_seven"
                android:text="@string/category_story_seven" />

            <TextView
                android:id="@+id/story_eight"
                style="@style/CategoryStyle"
                android:background="@color/category_story_eight"
                android:text="@string/category_story_eight" />

            <TextView
                android:id="@+id/story_nine"
                style="@style/CategoryStyle"
                android:background="@color/category_story_nine"
                android:text="@string/category_story_nine" />

            <TextView
                android:id="@+id/story_ten"
                style="@style/CategoryStyle"
                android:background="@color/category_story_ten"
                android:text="@string/category_story_ten" />

            <TextView
                android:id="@+id/story_extra"
                style="@style/CategoryStyle"
                android:background="@color/category_story_extra" />


        </LinearLayout>

    </ScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/nav_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:background="?android:attr/windowBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/bottom_nav_menu" />

</androidx.constraintlayout.widget.ConstraintLayout>